// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`failed 1`] = `
.c0 {
  box-sizing: border-box;
}

.c3 {
  box-sizing: border-box;
  padding: 16px;
  height: auto;
  border-radius: 8px;
  border-radius: 8px;
}

.c11 {
  box-sizing: border-box;
  margin-top: 24px;
}

.c9 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: none;
  text-transform: none;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  margin-left: 8px;
}

.c9:active {
  opacity: 0.56;
}

.c9:hover,
.c9:focus {
  background: none;
  text-decoration: underline;
}

.c9:disabled {
  background: none;
  color: rgba(255,255,255,0.3);
}

.c12 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  margin-right: 16px;
  width: 165px;
}

.c12:active {
  opacity: 0.56;
}

.c12:hover,
.c12:focus {
  background: #651FFF;
}

.c12:active {
  background: #354AA4;
}

.c12:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c13 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #222C59;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  margin-top: 16px;
  width: 165px;
}

.c13:active {
  opacity: 0.56;
}

.c13:hover,
.c13:focus {
  background: #2C3A73;
}

.c13:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c8 {
  display: inline-block;
  transition: color 0.3s;
  margin-left: 4px;
  color: #f50057;
}

.c1 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  font-size: 18px;
  margin-top: 4px;
  margin-bottom: 4px;
  margin: 0;
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin-bottom: 32px;
  margin: 0;
}

.c5 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  margin: 0;
}

.c6 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin-top: 8px;
  margin-bottom: 16px;
  margin: 0;
}

.c7 {
  display: flex;
  align-items: center;
}

.c7 .icon {
  margin-right: 8px;
}

.c10 {
  color: #03a9f4;
  font-weight: normal;
  padding-left: 0;
  font-size: inherit;
  min-height: auto;
}

.c4 {
  max-width: 800px;
  background-color: rgba(255,255,255,0.05);
  border: 2px solid #f50057;
}

<div
  class="c0"
>
  <div
    class="c1"
    font-size="18px"
  >
    Configure Resource
  </div>
  <div
    class="c2"
  >
    Install and configure the Teleport SSH Service on the server you want to add. 
    <br />
    Run the following command on the server you want to add.
  </div>
  <div
    class="c3 c4"
    height="auto"
  >
    <div
      class="c5"
    >
      Command
    </div>
    <div
      class="c6 c7"
    >
      <span
        class="c8 icon icon-warning "
        color="danger"
      />
      Encountered Error: 
      some error message
    </div>
    <button
      class="c9 c10"
      kind="text"
    >
      Refetch a command
    </button>
  </div>
  <div
    class="c11"
  >
    
    <button
      class="c12"
      disabled=""
      kind="primary"
      width="165px"
    >
      Next
    </button>
    <a
      class="c13"
      href="/web"
      kind="secondary"
      mt="3"
      width="165px"
    >
      Exit
    </a>
  </div>
</div>
`;

exports[`polling error state 1`] = `
.c0 {
  box-sizing: border-box;
}

.c3 {
  box-sizing: border-box;
  padding: 16px;
  height: auto;
  border-radius: 8px;
  border-radius: 8px;
}

.c6 {
  box-sizing: border-box;
  padding: 8px;
  margin-top: 8px;
  margin-bottom: 4px;
  background-color: #010B1C;
  border-radius: 4px;
  border-radius: 4px;
}

.c8 {
  box-sizing: border-box;
  margin-right: 8px;
}

.c10 {
  box-sizing: border-box;
  margin-right: 4px;
}

.c19 {
  box-sizing: border-box;
  margin-top: 24px;
}

.c11 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
}

.c11:active {
  opacity: 0.56;
}

.c11:hover,
.c11:focus {
  background: #651FFF;
}

.c11:active {
  background: #354AA4;
}

.c11:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c15 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: none;
  text-transform: none;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  margin-left: 4px;
}

.c15:active {
  opacity: 0.56;
}

.c15:hover,
.c15:focus {
  background: none;
  text-decoration: underline;
}

.c15:disabled {
  background: none;
  color: rgba(255,255,255,0.3);
}

.c20 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  margin-right: 16px;
  width: 165px;
}

.c20:active {
  opacity: 0.56;
}

.c20:hover,
.c20:focus {
  background: #651FFF;
}

.c20:active {
  background: #354AA4;
}

.c20:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c21 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #222C59;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  margin-top: 16px;
  width: 165px;
}

.c21:active {
  opacity: 0.56;
}

.c21:hover,
.c21:focus {
  background: #2C3A73;
}

.c21:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c14 {
  display: inline-block;
  transition: color 0.3s;
  margin-left: 4px;
  color: #f50057;
}

.c7 {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.c9 {
  display: flex;
}

.c1 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  font-size: 18px;
  margin-top: 4px;
  margin-bottom: 4px;
  margin: 0;
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin-bottom: 32px;
  margin: 0;
}

.c5 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  margin: 0;
}

.c12 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
}

.c17 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  margin-top: 24px;
  margin: 0;
}

.c13 {
  display: flex;
  align-items: center;
}

.c13 .icon {
  margin-right: 8px;
}

.c16 {
  color: #03a9f4;
  font-weight: normal;
  padding-left: 0;
  font-size: inherit;
  min-height: auto;
}

.c4 {
  max-width: 800px;
  background-color: rgba(255,255,255,0.05);
  border: 2px solid #f50057;
}

.c18 {
  margin-top: 6px;
  margin-bottom: 0;
}

<div
  class="c0"
>
  <div
    class="c1"
    font-size="18px"
  >
    Configure Resource
  </div>
  <div
    class="c2"
  >
    Install and configure the Teleport SSH Service on the server you want to add. 
    <br />
    Run the following command on the server you want to add.
  </div>
  <div
    class="c3 c4"
    height="auto"
  >
    <div
      class="c5"
    >
      Command
    </div>
    <div
      class="c6 c7"
    >
      <div
        class="c8 c9"
        style="overflow: auto; white-space: pre; word-break: break-all; font-size: 12px; font-family: \\"Droid Sans Mono\\", \\"monospace\\", monospace, \\"Droid Sans Fallback\\";"
      >
        <div
          class="c10"
        >
          $
        </div>
        <div>
          sudo bash -c "$(curl -fsSL http://localhost/scripts/some-join-token-hash/install-node.sh)"
        </div>
      </div>
      <button
        class="c11"
        kind="primary"
        style="max-width: 48px; width: 100%; padding: 4px 8px; min-height: 10px; font-size: 10px;"
      >
        Copy
      </button>
    </div>
    <div
      class="c0"
    >
      <div
        class="c12 c13"
      >
        <span
          class="c14 icon icon-warning "
          color="danger"
        />
        We could not detect the server you were trying to add
         
        <button
          class="c15 c16"
          kind="text"
        >
          Generate a new command
        </button>
      </div>
      <div
        class="c17"
      >
        Possible reasons
      </div>
      <ul
        class="c18"
      >
        <li>
          The command was not run on the server you were trying to add
        </li>
        <li>
          The Teleport SSH Service could not join this Teleport cluster. Check the logs for errors by running 
          <br />
          \`journalctl status teleport\`
        </li>
      </ul>
    </div>
  </div>
  <div
    class="c19"
  >
    
    <button
      class="c20"
      disabled=""
      kind="primary"
      width="165px"
    >
      Next
    </button>
    <a
      class="c21"
      href="/web"
      kind="secondary"
      mt="3"
      width="165px"
    >
      Exit
    </a>
  </div>
</div>
`;

exports[`polling state 1`] = `
.c0 {
  box-sizing: border-box;
}

.c3 {
  box-sizing: border-box;
  padding: 16px;
  height: auto;
  border-radius: 8px;
  border-radius: 8px;
}

.c6 {
  box-sizing: border-box;
  padding: 8px;
  margin-top: 8px;
  margin-bottom: 4px;
  background-color: #010B1C;
  border-radius: 4px;
  border-radius: 4px;
}

.c8 {
  box-sizing: border-box;
  margin-right: 8px;
}

.c10 {
  box-sizing: border-box;
  margin-right: 4px;
}

.c16 {
  box-sizing: border-box;
  margin-top: 24px;
}

.c11 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
}

.c11:active {
  opacity: 0.56;
}

.c11:hover,
.c11:focus {
  background: #651FFF;
}

.c11:active {
  background: #354AA4;
}

.c11:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c17 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  margin-right: 16px;
  width: 165px;
}

.c17:active {
  opacity: 0.56;
}

.c17:hover,
.c17:focus {
  background: #651FFF;
}

.c17:active {
  background: #354AA4;
}

.c17:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c18 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #222C59;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  margin-top: 16px;
  width: 165px;
}

.c18:active {
  opacity: 0.56;
}

.c18:hover,
.c18:focus {
  background: #2C3A73;
}

.c18:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c15 {
  display: inline-block;
  transition: color 0.3s;
  color: #FFFFFF;
  font-size: 18px;
}

.c7 {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.c9 {
  display: flex;
}

.c1 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  font-size: 18px;
  margin-top: 4px;
  margin-bottom: 4px;
  margin: 0;
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin-bottom: 32px;
  margin: 0;
}

.c5 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  margin: 0;
}

.c12 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
}

.c13 {
  display: flex;
  align-items: center;
}

.c13 .icon {
  margin-right: 8px;
}

.c4 {
  max-width: 800px;
  background-color: rgba(255,255,255,0.05);
  border: 2px solid #2F3659;
}

.c14 {
  white-space: pre;
}

<div
  class="c0"
>
  <div
    class="c1"
    font-size="18px"
  >
    Configure Resource
  </div>
  <div
    class="c2"
  >
    Install and configure the Teleport SSH Service on the server you want to add. 
    <br />
    Run the following command on the server you want to add.
  </div>
  <div
    class="c3 c4"
    height="auto"
  >
    <div
      class="c5"
    >
      Command
    </div>
    <div
      class="c6 c7"
    >
      <div
        class="c8 c9"
        style="overflow: auto; white-space: pre; word-break: break-all; font-size: 12px; font-family: \\"Droid Sans Mono\\", \\"monospace\\", monospace, \\"Droid Sans Fallback\\";"
      >
        <div
          class="c10"
        >
          $
        </div>
        <div>
          sudo bash -c "$(curl -fsSL http://localhost/scripts/some-join-token-hash/install-node.sh)"
        </div>
      </div>
      <button
        class="c11"
        kind="primary"
        style="max-width: 48px; width: 100%; padding: 4px 8px; min-height: 10px; font-size: 10px;"
      >
        Copy
      </button>
    </div>
    <div
      class="c12 c13 c14"
    >
      <span
        class="c15 icon icon-restore "
        color="light"
        font-size="4"
      />
      Waiting for Teleport SSH Service   |   05:00 minutes
    </div>
  </div>
  <div
    class="c16"
  >
    
    <button
      class="c17"
      disabled=""
      kind="primary"
      width="165px"
    >
      Next
    </button>
    <a
      class="c18"
      href="/web"
      kind="secondary"
      mt="3"
      width="165px"
    >
      Exit
    </a>
  </div>
</div>
`;

exports[`polling success state 1`] = `
.c0 {
  box-sizing: border-box;
}

.c3 {
  box-sizing: border-box;
  padding: 16px;
  height: auto;
  border-radius: 8px;
  border-radius: 8px;
}

.c6 {
  box-sizing: border-box;
  padding: 8px;
  margin-top: 8px;
  margin-bottom: 4px;
  background-color: #010B1C;
  border-radius: 4px;
  border-radius: 4px;
}

.c8 {
  box-sizing: border-box;
  margin-right: 8px;
}

.c10 {
  box-sizing: border-box;
  margin-right: 4px;
}

.c15 {
  box-sizing: border-box;
  margin-top: 24px;
}

.c11 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
}

.c11:active {
  opacity: 0.56;
}

.c11:hover,
.c11:focus {
  background: #651FFF;
}

.c11:active {
  background: #354AA4;
}

.c11:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c16 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  margin-right: 16px;
  width: 165px;
}

.c16:active {
  opacity: 0.56;
}

.c16:hover,
.c16:focus {
  background: #651FFF;
}

.c16:active {
  background: #354AA4;
}

.c16:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c17 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #222C59;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  margin-top: 16px;
  width: 165px;
}

.c17:active {
  opacity: 0.56;
}

.c17:hover,
.c17:focus {
  background: #2C3A73;
}

.c17:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c14 {
  display: inline-block;
  transition: color 0.3s;
  margin-left: 4px;
  color: #00bfa5;
}

.c7 {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.c9 {
  display: flex;
}

.c1 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  font-size: 18px;
  margin-top: 4px;
  margin-bottom: 4px;
  margin: 0;
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin-bottom: 32px;
  margin: 0;
}

.c5 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  margin: 0;
}

.c12 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
}

.c13 {
  display: flex;
  align-items: center;
}

.c13 .icon {
  margin-right: 8px;
}

.c4 {
  max-width: 800px;
  background-color: rgba(255,255,255,0.05);
  border: 2px solid #00bfa5;
}

<div
  class="c0"
>
  <div
    class="c1"
    font-size="18px"
  >
    Configure Resource
  </div>
  <div
    class="c2"
  >
    Install and configure the Teleport SSH Service on the server you want to add. 
    <br />
    Run the following command on the server you want to add.
  </div>
  <div
    class="c3 c4"
    height="auto"
  >
    <div
      class="c5"
    >
      Command
    </div>
    <div
      class="c6 c7"
    >
      <div
        class="c8 c9"
        style="overflow: auto; white-space: pre; word-break: break-all; font-size: 12px; font-family: \\"Droid Sans Mono\\", \\"monospace\\", monospace, \\"Droid Sans Fallback\\";"
      >
        <div
          class="c10"
        >
          $
        </div>
        <div>
          sudo bash -c "$(curl -fsSL http://localhost/scripts/some-join-token-hash/install-node.sh)"
        </div>
      </div>
      <button
        class="c11"
        kind="primary"
        style="max-width: 48px; width: 100%; padding: 4px 8px; min-height: 10px; font-size: 10px;"
      >
        Copy
      </button>
    </div>
    <div
      class="c12 c13"
    >
      <span
        class="c14 icon icon-checkmark-circle "
        color="success"
      />
      The server successfully joined this Teleport cluster
    </div>
  </div>
  <div
    class="c15"
  >
    
    <button
      class="c16"
      kind="primary"
      width="165px"
    >
      Next
    </button>
    <a
      class="c17"
      href="/web"
      kind="secondary"
      mt="3"
      width="165px"
    >
      Exit
    </a>
  </div>
</div>
`;
